--- a/style.css
+++ b/style.css
@@ -2,4 +2,27 @@
 
 body {
     font-family: Roboto, sans-serif;
+    margin: 0;
+}
+
+.header {
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-right: auto;
+}
+
+.header-links {
+    list-style-type: none;
+    padding: 0;
+    font-size: 18px;
+    color: #E5E7EB;
+    display: flex;
+    gap: 16px;
 }
