--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@ body {
     margin: 0;
 }
 
+.header-container {
+    background-color: #1F2937;
+    box-shadow: 0 0 8px rgba(0,0,0,.9);
+}
+
 .header {
     background-color: #1F2937;
     display: flex;
     align-items: center;
-    padding: 0 32px;
+    padding: 0;
+    max-width: 950px;
+    margin: auto;
 }
 
 .logo {
@@ -30,15 +37,19 @@ body {
 .hero-container {
     background-color: #1F2937;
     display: flex;
-    padding: 96px 32px;
+    padding: 96px 0px;
     gap: 32px;
     flex-wrap: wrap;
+    max-width: 950px;
+    margin: auto;
+    height: 250px;
 }
 
 .hero-block {
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-self: center;
 }
 
 .hero-image {
